--- a/src/components/LoginForm/login.css
+++ b/src/components/LoginForm/login.css
@@ -1,4 +1,3 @@
-
 .p-icon-field > .p-input-icon {
     position: absolute;
     top: 50%;
@@ -10,10 +9,10 @@
 
 @media screen and (max-width: 767px) {
     .sign-page{
-        width: 280px;
+        width: 280px !important;
     }
     .p-icon-field-right > .p-inputtext {
-        padding-right: 1.1rem !important;
+        padding-right: 1.6rem !important;
     }
 }
 
